<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameApproximateHistory"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/tv_task_approximate_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="19sp"
        android:text="@string/task_approximate_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_question_approximate_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="23sp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/et_input_approximate_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_task_approximate_history" />

    <EditText
        android:id="@+id/et_input_approximate_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textColor="@color/black"
        android:hint="@string/hint_approximate_history"
        android:inputType="number"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_answer_approximate_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_answer_approximate_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/answer_approximate_history"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="21sp"
        android:onClick="onClickAnswerApproximateHistory"
        android:padding="7dp"
        android:background="@drawable/btn"
        app:layout_constraintBottom_toTopOf="@+id/tv_result_approximate_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_result_approximate_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="21sp"
        android:text="@string/spaces_approximate_history"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_exit_approximate_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_exit_approximate_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/exit_approximate_history"
        android:textColor="@color/black"
        android:onClick="onClickExitApproximateHistory"
        android:padding="7dp"
        android:background="@drawable/btn"
        android:gravity="center"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_next_approximate_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/next_approximate_history"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="21sp"
        android:onClick="onClickNextApproximateHistory"
        android:padding="7dp"
        android:background="@drawable/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>